# amnesic

./: Cargo.toml  Changes.md  README.md
src/: main.rs
src/cli/: mod.rs
src/hardening/: anti_debug.rs  seccomp.rs
src/sandbox/: mod.rs  seccomp.rs  signals.rs  watchdog.rs
